# cmake-cpp-template

./: ${PROJECT_NAME_SNAKE}_version.h.in  CMakeLists.txt  CMakePresets.json  README.md
.template/: ConvertFrom-Template.ps1  README.md  templates
cmake/: ${PROJECT_NAME_PASCAL}Options.cmake
include/${PROJECT_NAME_SNAKE}/: ${PROJECT_NAME_SNAKE}.h
src/: ${PROJECT_NAME_SNAKE}.cpp  CMakeLists.txt
tests/: ${PROJECT_NAME_SNAKE}_tests.cpp  CMakeLists.txt
